# lazy-web

./: LICENSE  main.py  pyproject.toml
static/: style.css
templates/: about.html.j2  error.html.j2  index.html.j2
